# wfrcwf

./: dummy_step.wfr  dummy_workflow.wfr  dummy_workflow_only.wfr  pyproject.toml  trywfr-new.py  trywfr.py
src/wfrcwflib/: command.py  config.py  file.py  parse.py  state.py  workflow.py
src/wfrcwflib/test/: test_parse.py  test_workflow.py
