[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wfrcwf"
version = "0.0.1"
authors = [
  { name="Kyle Bittinger", email="kylebittinger@gmail.com" },
]
description = "Writing files to run commands to write files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kylebittinger/wfrcwf"
"Bug Tracker" = "https://github.com/kylebittinger/wfrcwf/issues"

